# src/types/seats.types.ts
@@ -1,0 +1,8 @@
+export const SECTION_TYPES = [
+  'left',
+  'center',
+  'right'
+] as const;
+
+export type SectionType =
+  typeof SECTION_TYPES[number];
